force-app/main/default/objects/Contract/fields/FRM_Master50K__c.field-meta.xml
<CustomField>
    <fullName>FRM_Master50K__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FRM_Master50K</label>
    <referenceTo>F50K_Master50K__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>