force-app/main/default/objects/Contract/fields/GatewayId__c.field-meta.xml
<CustomField>
    <fullName>GatewayId__c</fullName>
    <label>GatewayId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>