force-app/main/default/objects/Contract/fields/Historical_Claim_On_Record__c.field-meta.xml
<CustomField>
    <fullName>Historical_Claim_On_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer with chargeback. Please validate before processing the new contract or products.</description>
    <inlineHelpText>Customer with chargeback. Please validate before processing the new contract or products.</inlineHelpText>
    <label>Historical Claim On Record</label>
    <type>Checkbox</type>
</CustomField>