force-app/main/default/objects/Contract/fields/Imagen_Chargebee__c.field-meta.xml
<CustomField>
    <fullName>Imagen_Chargebee__c</fullName>
    <formula>IMAGE(&quot;/resource/1772746936000/Chargebee&quot;, &quot;Chargebee Logo&quot;, 42, 213)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>-</label>
    <type>Text</type>
</CustomField>