force-app/main/default/objects/Contract/fields/Include_Migrate_To_CB__c.field-meta.xml
<CustomField>
    <fullName>Include_Migrate_To_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Migrate To CB</label>
    <type>Checkbox</type>
</CustomField>