force-app/main/default/objects/Contract/fields/Is_Active_For_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_For_Rollup__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Status, &quot;Activated&quot;),
        ISPICKVAL(Status, &quot;Payment Process&quot;)
    ),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active For Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>