force-app/main/default/objects/Contract/fields/Is_Cancelled_At_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancelled_At_Start_Month__c</fullName>
    <formula>IF(AND( ISPICKVAL(Status, &quot;Cancelled&quot;), MONTH( SM_AC_start_date__c)=MONTH( SM_Cancellation_date__c), YEAR( SM_AC_start_date__c)=YEAR( SM_Cancellation_date__c)),TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Cancelled At Start Month</label>
    <type>Checkbox</type>
</CustomField>