force-app/main/default/objects/Contract/fields/Is_PTP__c.field-meta.xml
<CustomField>
    <fullName>Is_PTP__c</fullName>
    <formula>IF(AND(NOT(ISNULL(SM_AC_start_date__c)),NOT( ISBLANK(SM_AC_start_date__c) ),SM_AC_start_date__c&gt; DATEVALUE(CreatedDate)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is PTP</label>
    <type>Checkbox</type>
</CustomField>