force-app/main/default/objects/Contract/fields/Is_Test_Contract__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test Contract</label>
    <type>Checkbox</type>
</CustomField>