force-app/main/default/objects/Contract/fields/Is_VIP_Contract__c.field-meta.xml
<CustomField>
    <fullName>Is_VIP_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clientes VIP, no tienen COBROS.</description>
    <label>Is VIP Contract</label>
    <type>Checkbox</type>
</CustomField>