force-app/main/default/objects/Contract/fields/Last_Transmitted_Payment_Made_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Transmitted_Payment_Made_Date__c</fullName>
    <label>Last Transmitted Payment Made Date</label>
    <summarizedField>SM_Payment__c.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>SM_Payment__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>ACH TRANSMITTED</value>
    </summaryFilterItems>
    <summaryForeignKey>SM_Payment__c.SM_Contract__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>