force-app/main/default/objects/Contract/fields/Most_Recent_PR_URL__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_PR_URL__c</fullName>
    <label>Pay Link (Most Recent)</label>
    <type>Url</type>
</CustomField>