force-app/main/default/objects/Contract/fields/No_Active_Orders__c.field-meta.xml
<CustomField>
    <fullName>No_Active_Orders__c</fullName>
    <formula>IF(OR(AND( ISPICKVAL(SM_Payment_methods__c, &apos;ACH&apos;), ACH_Orders_Count__c =0),AND(ISPICKVAL(SM_Payment_methods__c, &apos;Credit Card&apos;),  Chargent_Orders_Count__c =0)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Active Orders</label>
    <type>Checkbox</type>
</CustomField>