force-app/main/default/objects/Contract/fields/Number_Periods_Since_Init_Date__c.field-meta.xml
<CustomField>
    <fullName>Number_Periods_Since_Init_Date__c</fullName>
    <formula>((YEAR(TODAY()) - YEAR( SM_AC_start_date__c ))*12) + (MONTH(TODAY()) - MONTH(SM_AC_start_date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Periods Since Init Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>