force-app/main/default/objects/Contract/fields/Opportunity_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Affiliate__c</fullName>
    <formula>IF(OR(ISNULL(SM_Opportunity__r.Affiliate__c),ISBLANK(SM_Opportunity__r.Affiliate__c)), NULL, CASESAFEID(SM_Opportunity__r.Affiliate__c))</formula>
    <label>Opportunity Affiliate</label>
    <type>Text</type>
</CustomField>