force-app/main/default/objects/Contract/fields/Payment_Pending__c.field-meta.xml
<CustomField>
    <fullName>Payment_Pending__c</fullName>
    <label>Pagos en Pending</label>
    <summaryFilterItems>
        <field>SM_Payment__c.SM_Check_Collection_Status__c</field>
        <operation>contains</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>SM_Payment__c.SM_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>