force-app/main/default/objects/Contract/fields/Payment_Transmitted__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transmitted__c</fullName>
    <label>Pagos en Transmitted</label>
    <summaryFilterItems>
        <field>SM_Payment__c.Payment_Status__c</field>
        <operation>contains</operation>
        <value>ACH PENDING, ACH TRANSMITTED, ACH PENDING REFUND, TRANSMITTED REFUND</value>
    </summaryFilterItems>
    <summaryForeignKey>SM_Payment__c.SM_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>