force-app/main/default/objects/Contract/fields/Poliza_Activa_Multinacional__c.field-meta.xml
<CustomField>
    <fullName>Poliza_Activa_Multinacional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Poliza Activa Multinacional</label>
    <type>Checkbox</type>
</CustomField>