force-app/main/default/objects/Contract/fields/Principal_Contract__c.field-meta.xml
<CustomField>
    <fullName>Principal_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts (Principal Contract)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>