force-app/main/default/objects/Contract/fields/Principal_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Principal_Contract_Status__c</fullName>
    <formula>TEXT(Principal_Contract__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Contract Status</label>
    <type>Text</type>
</CustomField>