force-app/main/default/objects/Contract/fields/Quantity_of_payment_day_changes__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_payment_day_changes__c</fullName>
    <label>Quantity of payment day changes</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>