force-app/main/default/objects/Contract/fields/Reasons_for_change__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_change__c</fullName>
    <description>Select an option in case the client requests the change of payment day</description>
    <inlineHelpText>Select an option in case the client requests the change of payment day</inlineHelpText>
    <label>Reasons for change Payment day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Death of a relative</fullName>
            </value>
            <value>
                <fullName>House Payment</fullName>
            </value>
            <value>
                <fullName>Personal Emergency</fullName>
            </value>
            <value>
                <fullName>Rent Payment</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>Weekend pay date update</fullName>
            </value>
            <value>
                <fullName>Weekend pay date update (resend)</fullName>
            </value>
            <value>
                <fullName>IT Support</fullName>
            </value>
            <value>
                <fullName>Weekend Updated</fullName>
            </value>
            <value>
                <fullName>Changed Payment Method</fullName>
            </value>
            <value>
                <fullName>Change Payment Date Contract</fullName>
            </value>
            <value>
                <fullName>Promises to Pay (PTP)</fullName>
            </value>
            <value>
                <fullName>Date Restored (Weekend)</fullName>
            </value>
            <value>
                <fullName>ChargeBee Subscription PTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>