force-app/main/default/objects/Contract/fields/SIN_IMPUESTOS__c.field-meta.xml
<CustomField>
    <fullName>SIN_IMPUESTOS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SIN IMPUESTOS</label>
    <type>Checkbox</type>
</CustomField>