force-app/main/default/objects/Contract/fields/SM_AC__c.field-meta.xml
<CustomField>
    <fullName>SM_AC__c</fullName>
    <label>AC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>