force-app/main/default/objects/Contract/fields/SM_AC_collected__c.field-meta.xml
<CustomField>
    <fullName>SM_AC_collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AC collected</label>
    <type>Checkbox</type>
</CustomField>