force-app/main/default/objects/Contract/fields/SM_Ac_day__c.field-meta.xml
<CustomField>
    <fullName>SM_Ac_day__c</fullName>
    <formula>TEXT(DAY( SM_AC_start_date__c ))</formula>
    <label>AC Day</label>
    <type>Text</type>
</CustomField>