force-app/main/default/objects/Contract/fields/SM_AC_Split_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_AC_Split_Date__c</fullName>
    <label>AC Split Date</label>
    <type>Date</type>
</CustomField>