force-app/main/default/objects/Contract/fields/SM_AC_start_date__c.field-meta.xml
<CustomField>
    <fullName>SM_AC_start_date__c</fullName>
    <label>AC start date</label>
    <type>Date</type>
</CustomField>