force-app/main/default/objects/Contract/fields/SM_Ac_year__c.field-meta.xml
<CustomField>
    <fullName>SM_Ac_year__c</fullName>
    <formula>RIGHT(TEXT(YEAR(   SM_AC_start_date__c  )),4)</formula>
    <label>AC year</label>
    <type>Text</type>
</CustomField>