force-app/main/default/objects/Contract/fields/SM_Accepted_Payments_Count__c.field-meta.xml
<CustomField>
    <fullName>SM_Accepted_Payments_Count__c</fullName>
    <label>Accepted Payments Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>