force-app/main/default/objects/Contract/fields/SM_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Account_Name__c</fullName>
    <formula>IF(Account.IsPersonAccount, Account.FirstName &amp; &quot; &quot; &amp; Account.MiddleName &amp; &quot; &quot; &amp; Account.LastName &amp; &quot; &quot; &amp; Account.Suffix, Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>