force-app/main/default/objects/Contract/fields/SM_Account_Person_Birthdate_Txt__c.field-meta.xml
<CustomField>
    <fullName>SM_Account_Person_Birthdate_Txt__c</fullName>
    <formula>TEXT(MONTH(Account.PersonBirthdate))+&quot;/&quot;+TEXT(DAY(Account.PersonBirthdate))+&quot;/&quot;+TEXT(YEAR(Account.PersonBirthdate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Person Birthdate Txt</label>
    <type>Text</type>
</CustomField>