force-app/main/default/objects/Contract/fields/SM_AccountTypeCheckingDocument__c.field-meta.xml
<CustomField>
    <fullName>SM_AccountTypeCheckingDocument__c</fullName>
    <formula>IF(
				 ISPICKVAL( SM_Payment_Method__r.ACH_Account_Type__c , &apos;Checking&apos;),
				&apos;X&apos;,
				&apos;&apos;
)</formula>
    <label>Account Type (Checking) Document</label>
    <type>Text</type>
</CustomField>