force-app/main/default/objects/Contract/fields/SM_AccountTypeSavingsDocument__c.field-meta.xml
<CustomField>
    <fullName>SM_AccountTypeSavingsDocument__c</fullName>
    <formula>IF(
				 ISPICKVAL( SM_Payment_Method__r.ACH_Account_Type__c , &apos;Savings&apos;),
				&apos;X&apos;,
				&apos;&apos;
)</formula>
    <label>Account Type (Savings) Document</label>
    <type>Text</type>
</CustomField>