force-app/main/default/objects/Contract/fields/SM_ACH__c.field-meta.xml
<CustomField>
    <fullName>SM_ACH__c</fullName>
    <formula>IF(
    AND(
								SM_Requires_RC_Payment__c,
								SM_Payment_Method__r.RecordType.Name == &apos;ACH&apos;
				),				 
				&apos;X&apos;,
				&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACH</label>
    <type>Text</type>
</CustomField>