force-app/main/default/objects/Contract/fields/SM_Annual_Interest__c.field-meta.xml
<CustomField>
    <fullName>SM_Annual_Interest__c</fullName>
    <label>Annual Interest (APR)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>