force-app/main/default/objects/Contract/fields/SM_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>SM_Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Contracts (Billing Address)</relationshipLabel>
    <relationshipName>BillingAddress</relationshipName>
    <type>Lookup</type>
</CustomField>