force-app/main/default/objects/Contract/fields/SM_Billing_status__c.field-meta.xml
<CustomField>
    <fullName>SM_Billing_status__c</fullName>
    <formula>IF(SM_Full_Payment__c =TRUE, &quot;PAYMENT COMPLETED&quot;,
	IF (SM_Charged_SB_Fees2__c = 0 ,&quot;WITHOUT PAYMENT REGISTER&quot;,
	   IF(
		  AND(
			 OR(ISPICKVAL(Status, &quot;Activated&quot;),ISPICKVAL(Status, &quot;Finalized&quot;)),
			 TEXT( SM_Way_of_Contract_Payment__c ) = &quot;Fix Term&quot;,
			 SM_Charged_SB_Fees2__c &gt;= SM_Plan_Months__c
		  ),
		  &quot;PAYMENT COMPLETED&quot;,
		  IF(
			 TODAY() &lt; SM_Next_installment_date__c  ,
			 &quot;PAYMENTS UP TO DATE&quot;,
			 IF(
				SM_Next_installment_date__c = TODAY() ,
				&quot;DUE TODAY&quot;,
				IF(TODAY() &gt; SM_Next_installment_date__c,
				   &quot;LATE PAYMENTS&quot;,
				   IF(
					  AND(
						 OR(ISPICKVAL(Status, &quot;Activated&quot;),ISPICKVAL(Status, &quot;Finalized&quot;)),
						 SM_Charged_SB_Fees2__c = 0,
						 SM_Plan_Months__c &gt; 0
					  ),
					  &quot;WITHOUT PAYMENT REGISTER&quot;,
					  &quot;&quot;
				   )
				)
			 )
		  )
	   )
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing status</label>
    <type>Text</type>
</CustomField>