force-app/main/default/objects/Contract/fields/SM_Cancellation_date__c.field-meta.xml
<CustomField>
    <fullName>SM_Cancellation_date__c</fullName>
    <label>Cancellation date</label>
    <type>Date</type>
</CustomField>