force-app/main/default/objects/Contract/fields/SM_Case_Client__c.field-meta.xml
<CustomField>
    <fullName>SM_Case_Client__c</fullName>
    <formula>SM_Dispute_Name__c + &apos; ID: &apos; + ContractNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Client</label>
    <type>Text</type>
</CustomField>