force-app/main/default/objects/Contract/fields/SM_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_Case_Id__c</fullName>
    <description>Number of dispute</description>
    <externalId>true</externalId>
    <inlineHelpText>Number of dispute</inlineHelpText>
    <label>Case Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>