force-app/main/default/objects/Contract/fields/SM_CC__c.field-meta.xml
<CustomField>
    <fullName>SM_CC__c</fullName>
    <formula>IF(
				SM_Payment_Method__r.RecordType.Name == &apos;Credit Card&apos;, 
				&apos;X&apos;,
				&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC</label>
    <type>Text</type>
</CustomField>