force-app/main/default/objects/Contract/fields/SM_Cc_mastercard__c.field-meta.xml
<CustomField>
    <fullName>SM_Cc_mastercard__c</fullName>
    <label>Cc mastercard</label>
    <length>10</length>
    <type>Text</type>
</CustomField>