force-app/main/default/objects/Contract/fields/SM_Cc_visa__c.field-meta.xml
<CustomField>
    <fullName>SM_Cc_visa__c</fullName>
    <label>Cc visa</label>
    <length>10</length>
    <type>Text</type>
</CustomField>