force-app/main/default/objects/Contract/fields/SM_Charged_AC_Amount__c.field-meta.xml
<CustomField>
    <fullName>SM_Charged_AC_Amount__c</fullName>
    <description>This field will have a Summary of the Ac fees that have been Charged so Far.</description>
    <inlineHelpText>This field will have a Summary of the Ac fees that have been Charged so Far.</inlineHelpText>
    <label>AC Collected value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>