force-app/main/default/objects/Contract/fields/SM_Charged_AC_Fees__c.field-meta.xml
<CustomField>
    <fullName>SM_Charged_AC_Fees__c</fullName>
    <description>This holds the Approved Transactions for The AC it&apos;s compared against the Number of fees for th AC</description>
    <inlineHelpText>This holds the Approved Transactions for The AC it&apos;s compared against the Number of fees for th AC</inlineHelpText>
    <label>Number of AC fees collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>