force-app/main/default/objects/Contract/fields/SM_Charged_SB_Amount__c.field-meta.xml
<CustomField>
    <fullName>SM_Charged_SB_Amount__c</fullName>
    <description>This will store the collected amount of charged Suscriptions</description>
    <inlineHelpText>This will store the collected amount of charged Suscriptions</inlineHelpText>
    <label>Value of fees collected (Anterior)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>