force-app/main/default/objects/Contract/fields/SM_Charged_SB_Fees__c.field-meta.xml
<CustomField>
    <fullName>SM_Charged_SB_Fees__c</fullName>
    <description>This field stores the amount of charged suscription fees</description>
    <label>Number of fees collected (Anterior)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>