force-app/main/default/objects/Contract/fields/SM_Checking__c.field-meta.xml
<CustomField>
    <fullName>SM_Checking__c</fullName>
    <formula>IF(
				AND(
        ISPICKVAL(SM_Payment_Method__r.SM_Payment_Type__c, &apos;ACH&apos;),
								ISPICKVAL(SM_Payment_Method__r.ACH_Account_Type__c,&apos;Checking&apos;)
				),
    &apos;X&apos;,
    &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checking</label>
    <type>Text</type>
</CustomField>