force-app/main/default/objects/Contract/fields/SM_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_Client_Id__c</fullName>
    <formula>Account.PersonContact.SM_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Id</label>
    <type>Text</type>
</CustomField>