force-app/main/default/objects/Contract/fields/SM_Company_Setting__c.field-meta.xml
<CustomField>
    <fullName>SM_Company_Setting__c</fullName>
    <formula>CASESAFEID(SM_Opportunity__r.SM_Company_Setting__c)</formula>
    <label>Company Setting</label>
    <type>Text</type>
</CustomField>