force-app/main/default/objects/Contract/fields/SM_Contract_date__c.field-meta.xml
<CustomField>
    <fullName>SM_Contract_date__c</fullName>
    <formula>IF(MONTH(SM_AC_start_date__c)&lt;10,&quot;0&quot;,&quot;&quot;)+TEXT(MONTH(SM_AC_start_date__c))+&quot;/&quot;+IF(DAY(SM_AC_start_date__c)&lt;10,&quot;0&quot;,&quot;&quot;)+TEXT(DAY(SM_AC_start_date__c))+&quot;/&quot;+TEXT(YEAR(SM_AC_start_date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract date</label>
    <type>Text</type>
</CustomField>