force-app/main/default/objects/Contract/fields/SM_Contract_day__c.field-meta.xml
<CustomField>
    <fullName>SM_Contract_day__c</fullName>
    <formula>TEXT(DAY(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract day</label>
    <type>Text</type>
</CustomField>