force-app/main/default/objects/Contract/fields/SM_Contract_Loan__c.field-meta.xml
<CustomField>
    <fullName>SM_Contract_Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>