force-app/main/default/objects/Contract/fields/SM_Contract_month__c.field-meta.xml
<CustomField>
    <fullName>SM_Contract_month__c</fullName>
    <formula>CASE(MONTH(today()),
1, &quot;enero&quot;,
2, &quot;febrero&quot;,
3, &quot;marzo&quot;,
4, &quot;abril&quot;,
5, &quot;mayo&quot;,
6, &quot;junio&quot;,
7, &quot;julio&quot;,
8, &quot;agosto&quot;,
9, &quot;septiembre&quot;,
10, &quot;octubre&quot;,
11, &quot;noviembre&quot;,
12, &quot;diciembre&quot;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract month</label>
    <type>Text</type>
</CustomField>