force-app/main/default/objects/Contract/fields/SM_Contract_year__c.field-meta.xml
<CustomField>
    <fullName>SM_Contract_year__c</fullName>
    <formula>TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract year</label>
    <type>Text</type>
</CustomField>