force-app/main/default/objects/Contract/fields/SM_ContractMonitoring__c.field-meta.xml
<CustomField>
    <fullName>SM_ContractMonitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Monitoring</label>
    <type>Checkbox</type>
</CustomField>