force-app/main/default/objects/Contract/fields/SM_CoupleContract__c.field-meta.xml
<CustomField>
    <fullName>SM_CoupleContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Couple Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>