force-app/main/default/objects/Contract/fields/SM_Credit_Score_TransUnion__c.field-meta.xml
<CustomField>
    <fullName>SM_Credit_Score_TransUnion__c</fullName>
    <label>Credit Score TransUnion</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>