force-app/main/default/objects/Contract/fields/SM_CT_Account_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>SM_CT_Account_Marital_Status__c</fullName>
    <formula>TEXT(Account.SM_Marital_Status__pc)</formula>
    <label>Account Marital Status</label>
    <type>Text</type>
</CustomField>