force-app/main/default/objects/Contract/fields/SM_CT_Account_Other_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>SM_CT_Account_Other_Document_Number__c</fullName>
    <formula>IF(
				OR(
								ISPICKVAL(Account.PersonContact.SM_Other_Document_Type__c, &apos;Driverss License&apos;),
								ISPICKVAL(Account.PersonContact.SM_Other_Document_Type__c, &apos;Passport&apos;)
    ),
				&apos;&apos;,
				Account.PersonContact.SM_Other_Document_Number__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Other Document Number</label>
    <type>Text</type>
</CustomField>