force-app/main/default/objects/Contract/fields/SM_CT_Account_Passport__c.field-meta.xml
<CustomField>
    <fullName>SM_CT_Account_Passport__c</fullName>
    <formula>IF(
				ISPICKVAL(Account.PersonContact.SM_Other_Document_Type__c, &apos;Passport&apos;), 
				Account.PersonContact.SM_Other_Document_Number__c,
				&apos;&apos;
)</formula>
    <label>Account Passport</label>
    <type>Text</type>
</CustomField>